@@ -1,5 +1,7 @@
 v0.2.2
     - Add a LICENSE section - Kwalitee.
+    - Minimal version of perl (5.008) - Kwalitee.
+    - Move under lib/Bundle/GimpTest.pm .
 
 v0.2.1  2013-12-23
     - Fix compilation problems.
